Fixed project alignment issue

--- a/ct_projects/static/ct_projects/css/style.css
+++ b/ct_projects/static/ct_projects/css/style.css
@@ -193,6 +193,24 @@ a.notification-link {
     border-radius: 0 5px 5px 0;
 }
 
+.project.public-project .header-medium {
+    height: 64px;
+    overflow: hidden;
+    position: relative;
+}
+
+.project.public-project .header-medium > .fadeout {
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    background: -webkit-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    background-image: -moz-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    background-image: -o-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    background-image: -ms-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+}
+
 /* Noty */
 #noty_top_layout_container > li {
     box-shadow: none  !important;
